2006-01-13  Anders Carlsson  <andersca@mac.com>

        Reviewed by Eric.

        * kjs/create_hash_table:
        Use correct size variables.

2006-01-13  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        * kjs/create_hash_table:
        Don't create an empty entry array, instead add a entry with all fields
        set to null and set the hash table size to 1.
        
        * kjs/lookup.cpp:
        (findEntry):
        Remove the hash table size check

2006-01-12  Anders Carlsson  <andersca@mac.com>

        Reviewed by Maciej.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6494
        Crash when assigning a new function to a DOMParser object
        
        * JavaScriptCore.xcodeproj/project.pbxproj:
        Move lookup.cpp before lookup.h
        
        * kjs/lookup.cpp:
        (findEntry):
        If the hash table is empty, return 0 early.

2006-01-12  George Staikos <staikos@kde.org>

        Reviewed by Darin.

        * kjs/interpreter.cpp:
        * kjs/testkjs.cpp:
        * kjs/interpreter.h:
        Add helper to interpreter to call the collector in order to facilitate
        visibility rules in KDE.

2006-01-12  George Staikos <staikos@kde.org>

        Reviewed by Maciej.

        * kjs/kjs.pro: Updates to build the whole thing on Linux at least.

        * kxmlcore/HashTable.h: Add missing assert.h

2006-01-12  Darin Adler  <darin@apple.com>

        Reviewed by Geoff.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6505
          retire APPLE_CHANGES from JavaScriptCore

        * JavaScriptCore.xcodeproj/project.pbxproj: Removed both
        APPLE_CHANGES and HAVE_CONFIG_H from all targets.

        * README: Removed. This had obsolete information in it
        and it wasn't clear what to replace it with.

        * kjs/collector.h: Removed an APPLE_CHANGES if around something
        that's not really platform-specific (although it does use a