@@ -124,9 +124,9 @@ Completion Interpreter::evaluate(const UString& sourceURL, int startingLineNumbe
         CString f = sourceURL.UTF8String();
         CString message = comp.value()->toObject(exec)->toString(exec).UTF8String();
 #ifdef WIN32
-		printf("%s:%s\n", f.c_str(), message.c_str());
+                printf("%s:%s\n", f.c_str(), message.c_str());
 #else
-		printf("[%d] %s:%s\n", getpid(), f.c_str(), message.c_str());
+                printf("[%d] %s:%s\n", getpid(), f.c_str(), message.c_str());
 #endif
     }
 
